common-applications/test-environment/gh-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: gh-proxy
  name: gh-proxy
