common-applications/test-environment/gh-proxy/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: gh-proxy
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: server
  type: ClusterIP
