common-applications/test-environment/gh-proxy/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: server-ingress
  namespace: gh-proxy
spec:
  rules:
  - host: gh-proxy.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: server-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - gh-proxy.test.osinfra.cn
    secretName: server-tls
